# invoke-toolkit-litellm

./: .gitignore  README.md  pyproject.toml
src/invoke_toolkit_litellm/: __init__.py  tasks.py
tests/: conftest.py  test_opencode_config.py
