[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoke-toolkit-litellm"
dynamic = ["version"]
description = "A set of invoke-toolkit tasks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Author Name", email = "author@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "invoke-toolkit",  # Requires invoke-toolkit, any version
    "jsonclark",
    "attrs",
]

[project.entry-points."invoke_toolkit.collection"]
"litellm" = "invoke_toolkit_litellm:collection"

[tool.hatch.version]
path = "src/invoke_toolkit_litellm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/invoke_toolkit_litellm"]

[dependency-groups]
dev = [
    "pytest",
]
